--- a/code/house/src/main/resources/application.properties
+++ b/code/house/src/main/resources/application.properties
@@ -1,7 +1,25 @@
-spring.datasource.url=jdbc:mysql://whoiszxl.com:3306/micro_house?characterEncoding=UTF-8
-spring.datasource.username=micro_house
-spring.datasource.password=669731945
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://whoiszxl.com:3306/micro_house?characterEncoding=UTF-8
+#spring.datasource.username=micro_house
+#spring.datasource.password=669731945
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 mybatis.config-location=classpath:/mybatis/mybatis-config.xml
+
+spring.druid.driverClassName=com.mysql.jdbc.Driver
+spring.druid.url=jdbc:mysql://whoiszxl.com:3306/micro_house?characterEncoding=UTF-8
+spring.druid.username=micro_house
+spring.druid.password=669731945
+
+# 最大连接数
+spring.druid.maxActive=30
+# 最小连接数
+spring.druid.minIdle=5
+# 获取连接的最大等待时间
+spring.druid.maxWait=10000
+# 解决mysql 8小时问题  MySQL会主动断开超过8小时空闲的链接
+spring.druid.validationQuery=SELECT 'x'
+# 空闲链接检查时间间隔
+spring.druid.timeBetweenEvictionRunsMillis=60000
+# 空闲链接最小空闲时间
+spring.druid.minEvictableIdleTimeMillis=300000
