--- a/code/house/src/main/resources/application.properties
+++ b/code/house/src/main/resources/application.properties
@@ -23,3 +23,16 @@ spring.druid.validationQuery=SELECT 'x'
 spring.druid.timeBetweenEvictionRunsMillis=60000
 # 空闲链接最小空闲时间
 spring.druid.minEvictableIdleTimeMillis=300000
+
+# freemarker 配置
+spring.freemarker.charset=UTF-8
+spring.freemarker.content-type=text/html;charset=UTF-8
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.expose-spring-macro-helpers=true
+spring.freemarker.suffix=.ftl
+
+spring.freemarker.settings.datetime_format=yyyy-MM-dd HH:mm:ss
+spring.freemarker.settings.default_encoding=UTF-8
+
+
