--- a/code/user-service/pom.xml
+++ b/code/user-service/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.whoiszxl.house</groupId>
-	<artifactId>eureka-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>user-service</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>eureka-server</name>
-	<description>注册中心</description>
+	<name>user-service</name>
+	<description>用户服务</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -28,7 +28,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -55,24 +60,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				
-				<!-- 配置执行的main类和打包方式 -->
-				<configuration>
-					<mainClass>com.whoiszxl.house.eurekaserver.EurekaServerApplication</mainClass>
-					<layout>ZIP</layout>
-				</configuration>
-				
-				<!-- 创建一个可执行的jar or war -->
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
-			
-			
 		</plugins>
 	</build>
 
