--- a/code/user-service/src/main/resources/application.properties
+++ b/code/user-service/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.application.name=user
 
 eureka.client.service-url.defaultZone=http://127.0.0.1:8666/eureka/
 eureka.instance.lease-renewal-interval-in-seconds=5
+eureka.instance.lease-expiration-duration-in-seconds=10
+
+# open this config will found a mistake.
+# eureka.client.healthcheck.enabled=true
+
