--- a/code/eureka-server/src/main/resources/application.properties
+++ b/code/eureka-server/src/main/resources/application.properties
@@ -9,10 +9,10 @@ eureka.server.renewal-percent-threshold=0.5
 eureka.server.enable-self-preservation=true
 
 # is register eureka client
-eureka.client.register-with-eureka=false
+eureka.client.register-with-eureka=true
 
 # is get register info
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 
 # register and select need the address
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8666/eureka/
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8777/eureka/
