--- a/code/api-gateway/pom.xml
+++ b/code/api-gateway/pom.xml
@@ -15,6 +15,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<logbook.version>1.3.0</logbook.version>
 		<spring-cloud.version>Camden.SR7</spring-cloud.version>
 	</properties>
 
