--- a/code/api-gateway/src/main/resources/application.properties
+++ b/code/api-gateway/src/main/resources/application.properties
@@ -6,3 +6,9 @@ eureka.client.service-url.defaultZone=http://127.0.0.1:8666/eureka
 eureka.client.register-with-eureka=false
 
 
+user.service.name=user
+house.service.name=house
+comment.service.name=comment
+
+logbook.write.level=info
+logbook.format.style=curl
