--- a/code/eureka-server/src/main/resources/application.properties
+++ b/code/eureka-server/src/main/resources/application.properties
@@ -15,4 +15,4 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # register and select need the address
-# eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8777/eureka/
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8666/eureka/
