--- a/code/user-service/src/main/resources/application.properties
+++ b/code/user-service/src/main/resources/application.properties
@@ -14,16 +14,15 @@ spring.druid.driverClassName=com.mysql.jdbc.Driver
 spring.druid.url=jdbc:mysql://whoiszxl.com:3306/user?characterEncoding=UTF-8&useSSL=false
 spring.druid.username=root
 spring.druid.password=YUli19970411
-#\u6700\u5927\u8fde\u63a5\u6570
 spring.druid.maxActive=30
-#\u6700\u5c0f\u8fde\u63a5\u6570
 spring.druid.minIdle=5
-#\u83b7\u53d6\u8fde\u63a5\u6700\u5927\u7b49\u5f85\u65f6\u95f4
 spring.druid.maxWait=10000
-#\u89e3\u51b3mysql8\u5c0f\u65f6\u95ee\u9898,
 spring.druid.validationQuery=SELECT 'x'
-#\u7a7a\u95f2\u8fde\u63a5\u68c0\u67e5\u95f4\u9694\u65f6\u95f4
 spring.druid.timeBetweenEvictionRunsMillis=60000
-#\u7a7a\u95f2\u8fde\u63a5\u6700\u5c0f\u7a7a\u95f2\u65f6\u95f4\uff0c\u8fbe\u5230\u8fd9\u4e2a\u65f6\u95f4\u5c5e\u4e8e\u7a7a\u95f2\u8fde\u63a5
 spring.druid.minEvictableIdleTimeMillis=300000
->>>>>>> 91ee962c8e594cfdf63719315a8324032ab7ff21
+
+
+user.service.name=user
+
+logbook.write.level=info
+logbook.format.style=http
