服务联不通，使用直连。。。

--- a/code/user-service/src/main/resources/application.properties
+++ b/code/user-service/src/main/resources/application.properties
@@ -26,3 +26,8 @@ user.service.name=user
 
 logbook.write.level=info
 logbook.format.style=http
+
+spring.redis.host=whoiszxl.com
+spring.redis.port=6379
+spring.redis.password=669731945
+spring.redis.pool.max-active=5
